<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="1"
    android:padding="10dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="160dp"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/temperature"/>
        <TextView
            android:padding="2dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/max_temp"/>
        <TextView
            android:id="@+id/tvItemMaxTemp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="160dp"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/temperature"/>
        <TextView
            android:padding="2dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/min_temp"/>
        <TextView
            android:id="@+id/tvItemMinTemp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="160dp"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/wind" />
        <TextView
            android:padding="2dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/max_wind"/>
        <TextView
            android:id="@+id/tvItemMaxWind"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="160dp"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/precip" />
        <TextView
            android:padding="2dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/precip"/>
        <TextView
            android:id="@+id/tvItemTotalPrecip"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="160dp"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/precip" />
        <TextView
            android:padding="2dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/chance_rain"/>
        <TextView
            android:id="@+id/tvItemChanceRain"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="160dp"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/snow" />
        <TextView
            android:padding="2dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/chance_snow"/>
        <TextView
            android:id="@+id/tvItemChanceSnow"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
</GridLayout>
