<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="1"
    android:padding="10dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/sunrise"/>
        <TextView
            android:padding="2dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sunrise"/>
        <TextView
            android:id="@+id/tvItemSunrise"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/sunset"/>
        <TextView
            android:padding="2dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sunset"/>
        <TextView
            android:id="@+id/tvItemSunset"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/moon_rise_set" />
        <TextView
            android:padding="2dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/moonrise"/>
        <TextView
            android:id="@+id/tvItemMoonrise"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/moon_rise_set" />
        <TextView
            android:padding="2dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/moonset"/>
        <TextView
            android:id="@+id/tvItemMoonset"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/moon_phase" />
        <TextView
            android:padding="2dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/phase"/>
        <TextView
            android:id="@+id/tvItemMoonphase"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/moon_illumination" />
        <TextView
            android:padding="2dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/illumination"/>
        <TextView
            android:id="@+id/tvItemMoonIllumination"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
</GridLayout>
